test/error/s_slot_ui64.lua
hstructure S
	u : ui64; -- cannot store UI64 values in a structure instance
end
